# sdl2-opengl-pipeline

./: .gitignore  CMakeLists.txt
shaders/: fragmentShader.glsl  vertexShader.glsl
src/: app.cpp  app.h  camera.cpp  camera.h  fragmentShader.glsl  main.cpp  quad.cpp  quad.h  shaderLoader.cpp  shaderLoader.h  shaderUniformHandler.cpp  shaderUniformHandler.h  sprite.cpp  sprite.h  spriteBatch.cpp  spriteBatch.h  textureHandler.cpp  textureHandler.h  transformation.cpp  transformation.h  vertexShader.glsl
